tried to style containers, didn't work

--- a/Lecture_0/styles.css
+++ b/Lecture_0/styles.css
@@ -14,3 +14,15 @@ p::selection{
     color:white;
     background-color: #006d40;
 }
+
+.container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.container > div {
+    background-color: springgreen;
+    font-size: 20px;
+    margin: 20px
+
+}
