other index app example with jinga for loop. added .pyc to gitignore

--- a/Lecture_2_Flask/flask_application/templates/index.html
+++ b/Lecture_2_Flask/flask_application/templates/index.html
@@ -2,18 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Is it New Year?</title>
-    <style>
-        body {
-            text-align: center
-        }
-     </style>
+    <title>Names for loop</title>
+
 </head>
 <body>
-    {% if new_year %}
-        <h1>Yes! Happy New Year!</h1>
-    {% else %}
-        <h1>NO</h1>
-    {% endif %}
+
+    <h1>Names</h1>
+
+    <ul>
+        {% for name in names %}
+            <li>{{ name }}</li>
+        {% endfor %}
+    </ul>
 </body>
 </html>
