example of link to another of our page, using variable to avoid changing manually the link everywhere it appears in code

--- a/Lecture_2_Flask/flask_application/templates/index.html
+++ b/Lecture_2_Flask/flask_application/templates/index.html
@@ -14,5 +14,7 @@
             <li>{{ name }}</li>
         {% endfor %}
     </ul>
+
+    <a href="{{ url_for('more') }}">See more here:  </a>
 </body>
 </html>
