--- a/Lecture_3_db/flask_application2/templates/layout2.html
+++ b/Lecture_3_db/flask_application2/templates/layout2.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My website!</title>
+    <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>{% block heading %}{% endblock %}</h1>
-
-    {% block body %}
-    {% endblock %}
+    <div class="container">
+        {% block body %}
+        {% endblock %}
+    </div>
 
 </body>
 </html>
