just created the first page, not leading anywhere

--- a/project1_books_app/templates/index.html
+++ b/project1_books_app/templates/index.html
@@ -12,15 +12,17 @@
         <div class="form-group">
             <input class="form-control" name="user" placeholder="User ID">
             <input name="password" type="password" placeholder="Password">
+            <p></p>
 
             <div class="form-group">
                 <button class="btn btn-primary">Login</button>
             </div>
 
-        </div>
+            <p>Not registered yet?</p>
 
-        <div class="form-group">
-            <button class="btn btn-primary">Not registered yet? Register</button>
+            <div class="form-group">
+            <button class="btn btn-primary">Register</button>
+            </div>
         </div>
 
     </form>
