--- a/project1_books_app/templates/index.html
+++ b/project1_books_app/templates/index.html
@@ -7,7 +7,7 @@
 {% block body %}
     <h1>Login</h1>
 
-    <form action="{{ url_for('index') }}" method="post">
+    <form action="{{ url_for('welcome') }}" method="post">
 
         <div class="form-group">
             <input class="form-control" name="user" placeholder="User ID">
@@ -15,13 +15,13 @@
             <p></p>
 
             <div class="form-group">
-                <button class="btn btn-primary">Login</button>
+                <button class="btn btn-primary"><a href = "{{url_for('welcome')}}">Login</a></button>
             </div>
 
             <p>Not registered yet?</p>
 
             <div class="form-group">
-            <button class="btn btn-primary">Register</button>
+                <button class="btn btn-primary"><a href = "{{url_for('register')}}">Register</a></button>
             </div>
         </div>
 
