--- a/project1_books_app/templates/index.html
+++ b/project1_books_app/templates/index.html
@@ -10,13 +10,10 @@
     <form action="{{ url_for('welcome') }}" method="post">
 
         <div class="form-group">
-            <input class="form-control" name="user" placeholder="User ID">
+            <input class="form-control" name="username" placeholder="User ID">
             <input name="password" type="password" placeholder="Password">
-            <p></p>
-
-            <div class="form-group">
-                <button class="btn btn-primary"><a href = "{{url_for('welcome')}}">Login</a></button>
-            </div>
+<!--            ICI ne fonctionne pas à mettre les 2 ensemble:-->
+            <button class="btn btn-primary"><a href = "{{url_for('welcome')}}">Login</a></button>
 
             <p>Not registered yet?</p>
 
