--- a/project1_books_app/templates/index.html
+++ b/project1_books_app/templates/index.html
@@ -8,19 +8,13 @@
     <h1>Login</h1>
 
     <form action="{{ url_for('welcome') }}" method="post">
-
-        <div class="form-group">
-            <input class="form-control" name="username" placeholder="User ID">
-            <input name="password" type="password" placeholder="Password">
+        <input class="form-control" name="username" placeholder="User ID">
+        <input name="password" type="password" placeholder="Password">
 <!--            ICI ne fonctionne pas à mettre les 2 ensemble:-->
-            <button class="btn btn-primary"><a href = "{{url_for('welcome')}}">Login</a></button>
-
-            <p>Not registered yet?</p>
-
-            <div class="form-group">
-                <button class="btn btn-primary"><a href = "{{url_for('register')}}">Register</a></button>
-            </div>
-        </div>
-
+        <button class="btn btn-primary">Login</a></button>
     </form>
+
+        <p>Not registered yet?</p>
+        <button class="btn btn-primary"><a href = "{{url_for('register')}}">Register</a></button>
+
 {% endblock %}
