Will now check user and password and link to database

--- a/project1_books_app/templates/welcome.html
+++ b/project1_books_app/templates/welcome.html
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block body %}
-    Hello, {{ username }}! Your password is {{ password }}
+    Hello, {{ username }}! You successfully logged in :)
 {% endblock %}
