--- a/project1_books_app/templates/index.html
+++ b/project1_books_app/templates/index.html
@@ -6,15 +6,13 @@
 
 {% block body %}
     <h1>Login</h1>
-
     <form action="{{ url_for('welcome') }}" method="post">
         <input class="form-control" name="username" placeholder="User ID">
         <input name="password" type="password" placeholder="Password">
-<!--            ICI ne fonctionne pas à mettre les 2 ensemble:-->
         <button class="btn btn-primary">Login</a></button>
     </form>
 
-        <p>Not registered yet?</p>
-        <button class="btn btn-primary"><a href = "{{url_for('register')}}">Register</a></button>
+    <h2>Not registered yet?</h2>
+    <a href = "{{url_for('register')}}"><button class="btn btn-primary">Register</button></a>
 
 {% endblock %}
