--- a/project1_books_app/templates/register.html
+++ b/project1_books_app/templates/register.html
@@ -6,7 +6,12 @@
 
 {% block body %}
 
-    TODO: form qui ajoute dans la bd le user
+    <h1>Register</h1>
+    <form action="{{ url_for('thanks') }}" method="post">
+        <input class="form-control" name="username" placeholder="User ID">
+        <input name="password" type="password" placeholder="Password">
+        <button class="btn btn-primary">Login</a></button>
+    </form>
 
     <a href = "{{ url_for('index')}}">Go back to sign-in page</a>
 
