--- a/project1_books_app/templates/register.html
+++ b/project1_books_app/templates/register.html
@@ -8,7 +8,7 @@
 
     <h1>Register</h1>
     <form action="{{ url_for('thanks') }}" method="post">
-        <input class="form-control" name="username" placeholder="User ID">
+        <input class="form-control" name="register" placeholder="Register">
         <input name="password" type="password" placeholder="Password">
         <button class="btn btn-primary">Login</a></button>
     </form>
