--- a/project1_books_app/templates/index.html
+++ b/project1_books_app/templates/index.html
@@ -7,7 +7,7 @@
 {% block body %}
     <h1>Login</h1>
     <form action="{{ url_for('welcome') }}" method="post">
-        <input class="form-control" name="login_form" placeholder="User ID">
+        <input class="form-control" name="username" placeholder="User ID">
         <input name="password" type="password" placeholder="Password">
         <button class="btn btn-primary">Login</a></button>
     </form>
