--- a/project1_books_app/templates/register.html
+++ b/project1_books_app/templates/register.html
@@ -8,8 +8,8 @@
 
     <h1>Register</h1>
     <form action="{{ url_for('thanks') }}" method="post">
-        <input class="form-control" name="username" placeholder="User ID">
-        <input name="password" type="password" placeholder="Password">
+        <input class="form-control" name="new_username" placeholder="User ID">
+        <input name="new_password" type="password" placeholder="Password">
         <button class="btn btn-primary">Login</a></button>
     </form>
 
