created new.html and register refers to it, maybe to complicated for nothing, but working

--- a/project1_books_app/templates/error.html
+++ b/project1_books_app/templates/error.html
@@ -8,9 +8,9 @@
     <h1>Error</h1>
 
     {{ message }}
-    <h2>Not registered yet?</h2>
+<p></p>
     <a href = "{{url_for('register')}}"><button class="btn btn-primary">Register</button></a>
-    <h2>Try again:</h2>
-    <a href = "{{ url_for('index')}}">Go back to sign-in page</a>
+<p></p>
+    <a href = "{{ url_for('index')}}"><button class="btn btn-primary">Go back to sign-in page</button></a>
 
 {% endblock %}
