--- a/project1_books_app/templates/register.html
+++ b/project1_books_app/templates/register.html
@@ -5,17 +5,19 @@
 {% endblock %}
 
 {% block body %}
-
     <h1>Register</h1>
-    <form action="{{ url_for('thanks') }}" method="post">
-        <input class="form-control" name="new_username" placeholder="User ID">
-        <input name="new_password" type="password" placeholder="Password">
-        <button class="btn btn-primary">Login</a></button>
+    <form action="{{ url_for('new') }}" method="post">
+
+        <div class="form-group">
+            <input class="form-control" name="new_username" placeholder="User ID">
+            <input name="new_password" type="password" placeholder="Password">
+        </div>
+        <div class="form-group">
+        <button class="btn btn-primary">Register</a></button>
+        </div>
     </form>
 
     <a href = "{{ url_for('index')}}">Go back to sign-in page</a>
-
-
 
 {% endblock %}
 
