--- a/project1_books_app/templates/index.html
+++ b/project1_books_app/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block body %}
     <h1>Login</h1>
-    <form action="{{ url_for('welcome') }}" method="post">
+    <form action="{{ url_for('search_book') }}" method="post">
         <input class="form-control" name="username" placeholder="User ID">
         <input name="password" type="password" placeholder="Password">
         <button class="btn btn-primary">Login</a></button>
