--- a/project1_books_app/templates/search_book.html
+++ b/project1_books_app/templates/search_book.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 
 {% block heading %}
-    Welcome
+    Search for books
 {% endblock %}
 
 {% block body %}
-    Hello, {{ username }}! You successfully logged in :)
+    <h1>Hello, {{ username }}! You can search for books here.</h1>
 
     <p>
     <a href = "{{url_for('logout')}}"><button class="btn btn-primary">Click here to logout.</button></a>
