--- a/project1_books_app/templates/index.html
+++ b/project1_books_app/templates/index.html
@@ -9,7 +9,7 @@
     <form action="{{ url_for('search_book') }}" method="post">
         <input class="form-control" name="username" placeholder="User ID">
         <input name="password" type="password" placeholder="Password">
-        <button class="btn btn-primary">Login</a></button>
+        <button class="btn btn-primary">Login</button>
     </form>
 
     <h2>Not registered yet?</h2>
