--- a/project1_books_app/templates/index.html
+++ b/project1_books_app/templates/index.html
@@ -1,12 +1,16 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Login
+    Welcome
+{% endblock %}
+
+{% block heading %}
+    Welcome to Book Search! Please Login to start.
 {% endblock %}
 
 {% block body %}
     <h1>Login</h1>
-    <form action="{{ url_for('search_book') }}" method="post">
+    <form action="{{ url_for('login') }}" method="post">
         <input class="form-control" name="username" placeholder="User ID">
         <input name="password" type="password" placeholder="Password">
         <button class="btn btn-primary">Login</button>
