--- a/Lecture_3_db/src3/airline1/templates/flights.html
+++ b/Lecture_3_db/src3/airline1/templates/flights.html
@@ -10,7 +10,7 @@
     <ul>
         {% for flight in flights %}
             <li>
-                <a href="{{ url_for('flight', flight_id=flight.id) }}">
+                <a href="{{ url_for('book', flight_id=flight.id) }}">
                     {{ flight.origin }} to {{ flight.destination }}
                 </a>
             </li>
