--- a/project1_books_app/templates/search_book.html
+++ b/project1_books_app/templates/search_book.html
@@ -14,7 +14,7 @@
             <input class="form-control" name="year" placeholder="year">
         </div>
         <div class="form-group">
-        <button class="btn btn-primary">Search</a></button>
+        <button class="btn btn-primary">Search</button>
         </div>
     </form>
 
