started to link to individual book

--- a/project1_books_app/templates/search_result.html
+++ b/project1_books_app/templates/search_result.html
@@ -9,8 +9,13 @@
 
     <ul>
         {% for book in result %}
-        <li>ISBN: {{ book.isbn }}, Title: {{ book.title }}, Author {{ book.author }},
-        Year: {{ book.year }}</li>
+        <li>
+
+            ISBN: {{ book.isbn }}, Title: {{ book.title }}, Author {{ book.author }},
+        Year: {{ book.year }}
+            <a href="{{ url_for('book') }}"></a>
+
+        </li>
         {% else %}
             <li>No result corresponding.</li>
         {% endfor %}
