--- a/project1_books_app/templates/search_result.html
+++ b/project1_books_app/templates/search_result.html
@@ -10,10 +10,9 @@
     <ul>
         {% for book in result %}
         <li>
-
-            ISBN: {{ book.isbn }}, Title: {{ book.title }}, Author {{ book.author }},
-        Year: {{ book.year }}
-            <a href="{{ url_for('book') }}"></a>
+            <a href="{{ url_for('book', book=book) }}" method="POST">
+            ISBN: {{ book.isbn }}, Title: {{ book.title }}, Author {{ book.author }}, Year: {{ book.year }}
+            </a>
 
         </li>
         {% else %}
