--- a/project1_books_app/templates/search_result.html
+++ b/project1_books_app/templates/search_result.html
@@ -10,7 +10,7 @@
     <ul>
         {% for book in result %}
         <li>
-            <a href="{{ url_for('book', book_isbn=book.isbn) }}" method="POST">
+            <a href="{{ url_for('book', book_isbn=book.isbn) }}" >
             ISBN: {{ book.isbn }}, Title: {{ book.title }}, Author {{ book.author }}, Year: {{ book.year }}
             </a>
 
