added a request to api to render it in book.html

--- a/project1_books_app/templates/book.html
+++ b/project1_books_app/templates/book.html
@@ -8,4 +8,7 @@
 
     <h1>ISBN: {{ this_book.isbn }}, Title: {{ this_book.title}}, Author {{ this_book.author }},
         Year: {{ this_book.year }}</h1>
+<p>
+    This is {{book_gr}}
+</p>
 {% endblock %}
