--- a/project1_books_app/templates/book.html
+++ b/project1_books_app/templates/book.html
@@ -9,6 +9,6 @@
     <h1>ISBN: {{ this_book.isbn }}, Title: {{ this_book.title}}, Author {{ this_book.author }},
         Year: {{ this_book.year }}</h1>
 <p>
-    This is {{book_gr}}
+    Info about this book's review count in api: {{book_gr}}
 </p>
 {% endblock %}
